css/style.css
:root {
    --saddle-brown: #833C0B;
    --tangerine-dream: #eb8c60;
    --powder-petal: #ffe2d1;
    --lavender-veil: #eadffc;
    --white-smoke: #f5f5f5;
    --soft-periwinkle: #9889df;
    --dark-amethyst: #21194c;
    /* https://coolors.co/eb8c60-ffe2d1-eadffc-9889df-21194c */
}

* {
    box-sizing: border-box;
    padding: 0px;
    margin: 0px;
    font-family: "Lexend", sans-serif;
}

h1 {
    color: var(--lavender-veil);
    font-size: 3rem;
    font-weight: 500;

    @media (aspect-ratio > 10/7) {
        font-size: 5.5vw;
        color: var(--dark-amethyst);
    }
}

h2 {
    font-family: "Cascadia Mono", sans-serif;
    font-size: 2rem;
    color: var(--soft-periwinkle);
    font-weight: 600;

    @media (aspect-ratio > 10/7) {
        font-size: 3.5vw;
    }
}

h3 {
    font-family: "Cascadia Mono", sans-serif;
    font-size: 1.3rem;
    font-weight: 400;
    color: var(--tangerine-dream);
}

p {
    font-size: 1.5rem;
    font-weight: 300;
}

button {
    border: 0px;
    background-color: var(--powder-petal);
    color: var(--dark-amethyst);
    border-radius: 50px;
    padding: 0.8rem 1.2rem;
    font-size: 1.2rem;

    @media (aspect-ratio > 7/9) {
        font-size: 1rem;
        padding: 1rem;
    }
}

button.highlight {
    background-color: var(--tangerine-dream);
    color: var(--white-smoke);
}

.hero {
    display: flex;
    flex-direction: column;
    height: 100vh;
    background-color: var(--dark-amethyst);
}

.header-img {
    text-align: center;

    @media (aspect-ratio > 7/9) {
        position: relative;
    }
}

.header-img img {
    width: 100%;
    height: auto;
}

.ontop-hero {
    display: none;

    @media (aspect-ratio > 10/7) {
        display: flex;
        flex-direction: column;
        position: absolute;
        bottom: 10px;
        right: 5vw;
        white-space: nowrap;
        margin-bottom: 1rem;
    }
}

.header-divider nav {
    display: none;

    @media (aspect-ratio > 10/7) {
        min-width: 40vw;
        display: flex;
        justify-content: center;
        align-items: center;
        margin-right: 5%;
        gap: 1rem;
    }
}

.header-divider {
    height: 3rem;
    width: 100vw;
    margin-top: -5px;
    background-color: #565077;

    @media (aspect-ratio > 10/7) {
        height: auto;
        display: flex;
        justify-content: flex-end;
    }
}

.below-hero {
    height: auto;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-bottom: 10rem;
    margin: auto;

    @media (aspect-ratio > 10/7) {
        display: none;
    }
}

nav {
    display: flex;
    justify-content: center;
    margin: 1rem;
    gap: 1rem;

}



.about-me {
    display: flex;
    flex-direction: column;
    height: 100vh;
    background-color: var(--powder-petal);
    padding: 8%;

    @media (aspect-ratio > 10/7) {
        display: grid;
        grid-template-areas:
            "portrait text-about-me"
            "portrait quick-facts";
        grid-template-columns: 2fr 3fr;
        gap: 3px;
        padding: 5px;
    }
}

.about-me div {
    padding: 10px;
}

.about-me div.text-about-me {
    border: 1px solid red;
    grid-area: text-about-me;
}

.about-me h1 {
    color: var(--saddle-brown);
    font-size: 2.5rem;
}

.about-me h2 {
    color: var(--tangerine-dream);
    font-size: 2rem;
    font-weight: 400;
    padding: 0px 20px;
}

.about-me p {
    padding: 0px 20px;
}

.about-me div.quick-facts {
    grid-area: quick-facts;

    p {
        color: var(--powder-petal);
        font-size: 1.3rem;
        text-align: center;
    }
}


.fact-card {
    display: flex;
    flex-wrap: wrap;
    background-color: var(--saddle-brown);
    margin: 10px 0;
    padding: 5px 20px;
    border-radius: 32px;
}

.portrait {

    @media (aspect-ratio > 10/7) {
        order: -1;
        grid-area: portrait;
        text-align: center;
    }
}

.portrait img {
    width: 100%;
    height: auto;
}

